--- a/assets/templates/todo.html
+++ b/assets/templates/todo.html
@@ -17,12 +17,21 @@
 
   <div id="todo-list">
     <div class="col-sm-4 col-sm-offset-4">
-      <div class="checkbox" ng-repeat="singleTodo in todos">
-        <label>
-          <input type="checkbox" ng-click="removeTodo(singleTodo)" />
-          {{ singleTodo.value }}
-        </label>
-      </div>
+      <table class="table table-striped table-hover">
+        <tbody>
+        <th>ToDo</th>
+        <th>&nbsp;</th>
+        <th>&nbsp;</th>
+        <div ng-repeat="singleTodo in todos">
+          <tr>
+            <td>{{ singleTodo.value }}</td>
+            <td>Editar</td>
+            <td><a href="#" ng-click="removeTodo(singleTodo)">Remover</a></td>
+          </tr>
+        </div>
+      </tbody>
+      </table>
     </div>
   </div>
+
 </div>
